Feat/#12 상품 기능 구현 (#31)
* feat: product domain 레이어드 기본 구조 생성

* feat: category 조회 api 개발

* feat: brand 조회 api 개발

* feat: 프로젝트 실행 시 데이터를 초기화 하는 DataInitalizer 클래스 생성

- 브랜드 및 카테고리 초기 데이터 설정

* feat: 거래상태 및 상품상태를 나타내는 status enum 클래스 생성

* refactor: 패키지 위치 변경

* feat: 등록 상품에 대한 태그를 관리하기 위한 Tag 구현

- ErdCloud 테이블에 tag 추가
- tag에 대한 초기 데이터 생성 코드 추가

* refactor: Long으로 잘못 설정되어있던 Brand, Category의 Id를 String 타입으로 변경

- 추가로 db 테이블명 명시적으로 추가함

* feat: ProductPost 생성 api 구현을 위한 record 타입의 요청,응답 객체 생성

* feat: ProductPost 생성 api 구현

- user id 는 임시로 더미데이터 사용
- 추후 user module 구현 완료 시 연결 필요

* feat: brand 관련 코드 삭제

- 새로 생성된 tag 테이블과 brand 테이블의 성향이 겹친다고 생각함
- 다중 선택이 가능한 tag를 유지하고 brand를 제거하여 사용자 경험 개선하고자 함

* rename: 혼선 방지를 위해 Product의 이름을 ProductPost로 통일함

* refactor: entity to dto 로직을 ProductPostMapper 클래스로 분리

* feat: 예외상황에 대한 공통 ErrorResponse를 생성하여 예외 응답을 반환하도록 구현

* feat: 입력값 검증(validate), 잘못된 api, 기타 예외에 대한 handleException 구현

* test: 게시물 생성 service 테스트 코드 작성

* feat: 게시물 삭제 api 구현

* test: 게시물 삭제 service 테스트 코드 작성

* feat: 상품 게시글 update api 개발

* feat: 단일 상품 게시글 조회 api 개발

* feat: 상품 게시글 초기 데이터 생성 및 도메인 별로 초기 데이터를 관리하도록 분리

* feat: 상품 다건 조회 (필터) api 개발

- JPA Specification 기반 동적 필터링 적용
- 카테고리, 상태, 가격 범위로 검색 가능
- Pageable을 통한 페이징 처리

* fix: 삭제되어있는 상품(softDelete => DeleteStatus.D)을 단건 조회 시 404 예외를 발생하도록 수정

* test: productPost service 테스트 코드 작성

* fix: CustomException에 int code 추가하여 사용했었는데 충돌이 좀 나서 임시 주석처리

* feat: 상품 게시글 생성 시 이미지 업로드 기능 추가

- 이미지 테이블과 게시글의 중간 메핑 테이블을 새로 생성함

* test: 인텔리제이를 통해 Requset http 테스트 및 테스트 용 이미지 추가

* feat: 업로드된 이미지를 url을 통해 삭제하는 로직 구현

* test: create 파일 첨부 로직 구현 후 테스트 코드 수정 중, 임시 주석처리

---------

Co-authored-by: 최민석 <106965005+choizz156@users.noreply.github.com>