@@ -1,38 +1,30 @@
 package com.domainservice.domain.post.post.service;
 
-import static com.common.exception.vo.ProductPostExceptionCode.*;
-import static com.common.exception.vo.UserExceptionCode.*;
-import static org.assertj.core.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.BDDMockito.*;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-
+import com.domainservice.domain.post.post.exception.ProductPostException;
+import com.domainservice.domain.post.post.model.dto.request.UpdateProductPostRequest;
+import com.domainservice.domain.post.post.model.dto.response.ProductPostResponse;
+import com.domainservice.domain.post.post.model.entity.ProductPost;
+import com.domainservice.domain.post.post.model.enums.ProductStatus;
+import com.domainservice.domain.post.post.model.enums.TradeStatus;
+import com.domainservice.domain.post.post.repository.ProductPostRepository;
+import com.domainservice.domain.post.tag.model.entity.Tag;
+import com.domainservice.domain.post.tag.repository.TagRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.web.multipart.MultipartFile;
 
-import com.common.model.vo.ProductStatus;
-import com.common.model.vo.TradeStatus;
-import com.domainservice.common.configuration.feign.client.UserFeignClient;
-import com.domainservice.domain.asset.image.application.ImageService;
-import com.domainservice.domain.asset.image.domain.entity.Image;
-import com.domainservice.domain.asset.image.domain.entity.ImageTarget;
-import com.domainservice.domain.post.kafka.handler.ProductPostEventProducer;
-import com.domainservice.domain.post.post.exception.ProductPostException;
-import com.domainservice.domain.post.post.model.dto.request.ProductPostRequest;
-import com.domainservice.domain.post.post.model.dto.response.ProductPostResponse;
-import com.domainservice.domain.post.post.model.entity.ProductPost;
-import com.domainservice.domain.post.post.repository.ProductPostRepository;
-import com.domainservice.domain.post.tag.model.entity.Tag;
-import com.domainservice.domain.post.tag.repository.TagRepository;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
+import static com.domainservice.domain.post.post.exception.vo.ProductPostExceptionCode.*;
+import static org.assertj.core.api.Assertions.*;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verify;
 
 /**
  * ProductPostService 수정 기능 테스트
@@ -49,35 +41,22 @@ class UpdateProductPostTest {
     @Mock
     private TagRepository tagRepository;
 
-    @Mock
-    private ImageService imageService;
-
-    @Mock
-    private UserFeignClient userClient;
-
-    @Mock
-    private MultipartFile mockImageFile;
-
-	@Mock
-	private ProductPostEventProducer eventProducer;
-
-    @DisplayName("판매자는 게시글을 수정할 수 있다.")
+    @DisplayName("게시글을 수정할 수 있다.")
     @Test
     void test1() {
         // given
         String userId = "user-123";
         String postId = "post-123";
-        List<MultipartFile> imageFiles = List.of(mockImageFile);
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("아이폰 15 Pro 급매!")
-                .name("iPhone 15 Pro 256GB")
-                .price(1100000)
-                .description("가격 인하했습니다")
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .tagIds(Arrays.asList("tag-1", "tag-2"))
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "아이폰 15 Pro 급매!",
+                "iPhone 15 Pro 256GB",
+                1100000,
+                "가격 인하했습니다",
+                ProductStatus.GOOD,
+                "https://example.com/new-image.jpg",
+                Arrays.asList("tag-1", "tag-2")
+        );
 
         ProductPost existingPost = ProductPost.builder()
                 .userId(userId)
@@ -94,18 +73,11 @@ class UpdateProductPostTest {
                 Tag.builder().name("256GB").build()
         );
 
-        Image mockImage = Image.builder()
-                .s3Url("https://s3.example.com/updated.webp")
-                .build();
-
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
         given(tagRepository.findAllById(request.tagIds())).willReturn(tags);
-        given(imageService.uploadProfileImageListByTarget(anyList(), eq(ImageTarget.PRODUCT)))
-                .willReturn(List.of(mockImage));
 
         // when
-        ProductPostResponse result = productPostService.updateProductPost(request, imageFiles, userId, postId);
+        ProductPostResponse result = productPostService.updateProductPost(userId, postId, request);
 
         // then
         assertThat(result).isNotNull();
@@ -115,100 +87,68 @@ class UpdateProductPostTest {
         assertThat(result.description()).isEqualTo(request.description());
         assertThat(result.status()).isEqualTo(request.status());
 
-        verify(userClient).getUser(userId);
         verify(productPostRepository).findById(postId);
         verify(tagRepository).findAllById(request.tagIds());
-        verify(imageService).uploadProfileImageListByTarget(anyList(), eq(ImageTarget.PRODUCT));
     }
 
-    @DisplayName("ADMIN은 게시글을 수정할 수 있다.")
+    @DisplayName("제목만 수정할 수 있다.")
     @Test
     void test2() {
         // given
-        String userId = "admin-123";
+        String userId = "user-123";
         String postId = "post-123";
-        List<MultipartFile> imageFiles = List.of(mockImageFile);
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("아이폰 15 Pro 급매!")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "아이폰 15 Pro 급매!",
+                null,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
 
         ProductPost existingPost = ProductPost.builder()
-                .userId("user-123")
+                .userId(userId)
                 .categoryId("category-123")
                 .title("아이폰 15 Pro")
                 .name("iPhone 15 Pro")
                 .price(1200000)
+                .description("거의 새것")
                 .status(ProductStatus.GOOD)
                 .tradeStatus(TradeStatus.SELLING)
                 .build();
 
-        Image mockImage = Image.builder()
-                .s3Url("https://s3.example.com/updated.webp")
-                .build();
-
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createAdmin(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
-        given(imageService.uploadProfileImageListByTarget(anyList(), eq(ImageTarget.PRODUCT)))
-                .willReturn(List.of(mockImage));
 
         // when
-        ProductPostResponse result = productPostService.updateProductPost(request, imageFiles, userId, postId);
+        ProductPostResponse result = productPostService.updateProductPost(userId, postId, request);
 
         // then
         assertThat(result).isNotNull();
-        assertThat(result.title()).isEqualTo(request.title());
+        assertThat(result.title()).isEqualTo("아이폰 15 Pro 급매!");
+        assertThat(result.name()).isEqualTo("iPhone 15 Pro");  // 변경 안 됨
+        assertThat(result.price()).isEqualTo(1200000);  // 변경 안 됨
 
-        verify(userClient).getUser(userId);
         verify(productPostRepository).findById(postId);
-        verify(imageService).uploadProfileImageListByTarget(anyList(), eq(ImageTarget.PRODUCT));
     }
 
-    @DisplayName("일반 USER는 게시글을 수정할 수 없다.")
+    @DisplayName("가격과 설명을 수정할 수 있다.")
     @Test
     void test3() {
         // given
         String userId = "user-123";
         String postId = "post-123";
-        List<MultipartFile> imageFiles = List.of(mockImageFile);
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("수정된 제목")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
-
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createUser(userId));
-
-        // when & then
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, imageFiles, userId, postId))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining(SELLER_PERMISSION_REQUIRED.getMessage());
-
-        verify(userClient).getUser(userId);
-        verify(productPostRepository, never()).findById(anyString());
-    }
-
-    @DisplayName("이미지 없이 수정하면 예외가 발생한다.")
-    @Test
-    void test4() {
-        // given
-        String userId = "user-123";
-        String postId = "post-123";
-
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("아이폰 15 Pro 급매!")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                null,
+                null,
+                1100000,
+                "가격 인하했습니다",
+                null,
+                null,
+                null
+        );
 
         ProductPost existingPost = ProductPost.builder()
                 .userId(userId)
@@ -220,37 +160,61 @@ class UpdateProductPostTest {
                 .tradeStatus(TradeStatus.SELLING)
                 .build();
 
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
 
-        // when & then
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, null, userId, postId))
-                .isInstanceOf(ProductPostException.class)
-                .hasMessage(IMAGE_REQUIRED.getMessage());
+        // when
+        ProductPostResponse result = productPostService.updateProductPost(userId, postId, request);
 
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, Collections.emptyList(), userId, postId))
-                .isInstanceOf(ProductPostException.class)
-                .hasMessage(IMAGE_REQUIRED.getMessage());
+        // then
+        assertThat(result).isNotNull();
+        assertThat(result.price()).isEqualTo(1100000);
+        assertThat(result.description()).isEqualTo("가격 인하했습니다");
+        assertThat(result.title()).isEqualTo("아이폰 15 Pro");  // 변경 안 됨
 
-        verify(userClient, times(2)).getUser(userId);
-        verify(productPostRepository, times(2)).findById(postId);
+        verify(productPostRepository).findById(postId);
     }
 
-    @DisplayName("다른 사용자의 게시글은 수정할 수 없다.")
+    @DisplayName("존재하지 않는 게시글은 수정할 수 없다.")
+    @Test
+    void test4() {
+        // given
+        String userId = "user-123";
+        String postId = "invalid-post-id";
+
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "수정된 제목",
+                null,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
+
+        given(productPostRepository.findById(postId)).willReturn(Optional.empty());
+
+        // when & then
+        assertThatThrownBy(() -> productPostService.updateProductPost(userId, postId, request))
+                .isInstanceOf(ProductPostException.class)
+                .hasMessage(PRODUCT_POST_NOT_FOUND.getMessage());
+    }
+
+    @DisplayName("인증되지 않은 사용자는 게시글을 수정할 수 없다.")
     @Test
     void test5() {
         // given
-        String userId = "user-456";
+        String userId = null;
         String postId = "post-123";
-        List<MultipartFile> imageFiles = List.of(mockImageFile);
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("수정된 제목")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "수정된 제목",
+                null,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
 
         ProductPost existingPost = ProductPost.builder()
                 .userId("user-123")
@@ -262,33 +226,65 @@ class UpdateProductPostTest {
                 .tradeStatus(TradeStatus.SELLING)
                 .build();
 
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
 
         // when & then
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, imageFiles, userId, postId))
+        assertThatThrownBy(() -> productPostService.updateProductPost(userId, postId, request))
+                .isInstanceOf(ProductPostException.class)
+                .hasMessage(UNAUTHORIZED.getMessage());
+    }
+
+    @DisplayName("다른 사용자의 게시글은 수정할 수 없다.")
+    @Test
+    void test6() {
+        // given
+        String userId = "user-456";
+        String postId = "post-123";
+
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "수정된 제목",
+                null,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
+
+        ProductPost existingPost = ProductPost.builder()
+                .userId("user-123")
+                .categoryId("category-123")
+                .title("아이폰 15 Pro")
+                .name("iPhone 15 Pro")
+                .price(1200000)
+                .status(ProductStatus.GOOD)
+                .tradeStatus(TradeStatus.SELLING)
+                .build();
+
+        given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
+
+        // when & then
+        assertThatThrownBy(() -> productPostService.updateProductPost(userId, postId, request))
                 .isInstanceOf(ProductPostException.class)
                 .hasMessage(PRODUCT_POST_FORBIDDEN.getMessage());
-
-        verify(userClient).getUser(userId);
-        verify(productPostRepository).findById(postId);
     }
 
     @DisplayName("판매 완료된 게시글은 수정할 수 없다.")
     @Test
-    void test6() {
+    void test7() {
         // given
         String userId = "user-123";
         String postId = "post-123";
-        List<MultipartFile> imageFiles = List.of(mockImageFile);
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("수정된 제목")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "수정된 제목",
+                null,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
 
         ProductPost existingPost = ProductPost.builder()
                 .userId(userId)
@@ -300,33 +296,30 @@ class UpdateProductPostTest {
                 .tradeStatus(TradeStatus.SOLDOUT)
                 .build();
 
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
 
         // when & then
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, imageFiles, userId, postId))
+        assertThatThrownBy(() -> productPostService.updateProductPost(userId, postId, request))
                 .isInstanceOf(ProductPostException.class)
                 .hasMessage(CANNOT_UPDATE_SOLDOUT.getMessage());
-
-        verify(userClient).getUser(userId);
-        verify(productPostRepository).findById(postId);
     }
 
     @DisplayName("이미 삭제된 게시글은 수정할 수 없다.")
     @Test
-    void test7() {
+    void test8() {
         // given
         String userId = "user-123";
         String postId = "post-123";
-        List<MultipartFile> imageFiles = List.of(mockImageFile);
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("수정된 제목")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "수정된 제목",
+                null,
+                null,
+                null,
+                null,
+                null,
+                null
+        );
 
         ProductPost existingPost = ProductPost.builder()
                 .userId(userId)
@@ -340,76 +333,31 @@ class UpdateProductPostTest {
 
         existingPost.delete();
 
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
 
         // when & then
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, imageFiles, userId, postId))
+        assertThatThrownBy(() -> productPostService.updateProductPost(userId, postId, request))
                 .isInstanceOf(ProductPostException.class)
                 .hasMessage(ALREADY_DELETED.getMessage());
-
-        verify(userClient).getUser(userId);
-        verify(productPostRepository).findById(postId);
     }
 
-    @DisplayName("이미지가 10개를 초과하면 수정할 수 없다.")
-    @Test
-    void test8() {
-        // given
-        String userId = "user-123";
-        String postId = "post-123";
-        List<MultipartFile> tooManyImages = Arrays.asList(
-                mockImageFile, mockImageFile, mockImageFile, mockImageFile, mockImageFile,
-                mockImageFile, mockImageFile, mockImageFile, mockImageFile, mockImageFile,
-                mockImageFile
-        );
-
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("아이폰 15 Pro")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
-
-        ProductPost existingPost = ProductPost.builder()
-                .userId(userId)
-                .categoryId("category-123")
-                .title("아이폰 15 Pro")
-                .name("iPhone 15 Pro")
-                .price(1200000)
-                .status(ProductStatus.GOOD)
-                .tradeStatus(TradeStatus.SELLING)
-                .build();
-
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
-        given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
-
-        // when & then
-        assertThatThrownBy(() -> productPostService.updateProductPost(request, tooManyImages, userId, postId))
-                .isInstanceOf(ProductPostException.class)
-                .hasMessage(TOO_MANY_IMAGES.getMessage());
-
-        verify(userClient).getUser(userId);
-        verify(productPostRepository).findById(postId);
-        verify(imageService, never()).uploadProfileImageListByTarget(anyList(), any());
-    }
-
-    @DisplayName("기존 이미지는 삭제되고 새 이미지로 교체된다.")
+    @DisplayName("존재하지 않는 태그가 포함되면 수정할 수 없다.")
     @Test
     void test9() {
         // given
         String userId = "user-123";
         String postId = "post-123";
-        List<MultipartFile> newImageFiles = List.of(mockImageFile);
+        List<String> tagIds = Arrays.asList("tag-1", "tag-2", "invalid-tag");
 
-        ProductPostRequest request = ProductPostRequest.builder()
-                .title("아이폰 15 Pro")
-                .name("iPhone 15 Pro")
-                .price(1100000)
-                .categoryId("category-123")
-                .status(ProductStatus.GOOD)
-                .build();
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "아이폰 15 Pro 급매!",
+                null,
+                null,
+                null,
+                null,
+                null,
+                tagIds
+        );
 
         ProductPost existingPost = ProductPost.builder()
                 .userId(userId)
@@ -421,24 +369,99 @@ class UpdateProductPostTest {
                 .tradeStatus(TradeStatus.SELLING)
                 .build();
 
-        Image newImage = Image.builder()
-                .s3Url("https://s3.example.com/new-image.webp")
+        // 요청한 태그 3개 중 2개만 조회됨
+        List<Tag> tags = Arrays.asList(
+                Tag.builder().name("급매").build(),
+                Tag.builder().name("256GB").build()
+        );
+
+        given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
+        given(tagRepository.findAllById(tagIds)).willReturn(tags);
+
+        // when & then
+        assertThatThrownBy(() -> productPostService.updateProductPost(userId, postId, request))
+                .isInstanceOf(ProductPostException.class)
+                .hasMessage(TAG_NOT_FOUND.getMessage());
+    }
+
+    @DisplayName("빈 태그 리스트로 수정하면 모든 태그가 삭제된다.")
+    @Test
+    void test10() {
+        // given
+        String userId = "user-123";
+        String postId = "post-123";
+
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                Collections.emptyList()
+        );
+
+        ProductPost existingPost = ProductPost.builder()
+                .userId(userId)
+                .categoryId("category-123")
+                .title("아이폰 15 Pro")
+                .name("iPhone 15 Pro")
+                .price(1200000)
+                .status(ProductStatus.GOOD)
+                .tradeStatus(TradeStatus.SELLING)
                 .build();
 
-        given(userClient.getUser(userId)).willReturn(UserViewFactory.createSeller(userId));
         given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
-        given(imageService.uploadProfileImageListByTarget(anyList(), eq(ImageTarget.PRODUCT)))
-                .willReturn(List.of(newImage));
+        given(tagRepository.findAllById(Collections.emptyList())).willReturn(Collections.emptyList());
 
         // when
-        ProductPostResponse result = productPostService.updateProductPost(request, newImageFiles, userId, postId);
+        ProductPostResponse result = productPostService.updateProductPost(userId, postId, request);
 
         // then
         assertThat(result).isNotNull();
+        assertThat(result.tags()).isEmpty();
 
-        verify(userClient).getUser(userId);
         verify(productPostRepository).findById(postId);
-        verify(productPostRepository).flush();
-        verify(imageService).uploadProfileImageListByTarget(anyList(), eq(ImageTarget.PRODUCT));
+        verify(tagRepository).findAllById(Collections.emptyList());
+    }
+
+    @DisplayName("태그를 null로 수정하면 태그가 유지된다.")
+    @Test
+    void test11() {
+        // given
+        String userId = "user-123";
+        String postId = "post-123";
+
+        UpdateProductPostRequest request = new UpdateProductPostRequest(
+                "아이폰 15 Pro 급매!",
+                null,
+                1100000,
+                null,
+                null,
+                null,
+                null  // 태그 수정 안 함
+        );
+
+        ProductPost existingPost = ProductPost.builder()
+                .userId(userId)
+                .categoryId("category-123")
+                .title("아이폰 15 Pro")
+                .name("iPhone 15 Pro")
+                .price(1200000)
+                .status(ProductStatus.GOOD)
+                .tradeStatus(TradeStatus.SELLING)
+                .build();
+
+        given(productPostRepository.findById(postId)).willReturn(Optional.of(existingPost));
+
+        // when
+        ProductPostResponse result = productPostService.updateProductPost(userId, postId, request);
+
+        // then
+        assertThat(result).isNotNull();
+        assertThat(result.title()).isEqualTo("아이폰 15 Pro 급매!");
+        assertThat(result.price()).isEqualTo(1100000);
+
+        verify(productPostRepository).findById(postId);
     }
 }
